--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "76d0c004393738919f20942caa5ceb75"
-name = "FourCore Cursor"
+name = "FourCore Custom Cursor"
 application_url = "https://fourcore-cursor-i65y.onrender.com"
 embedded = true
 
