Harden compliance webhooks and auto-register

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -19,6 +19,10 @@ api_version = "2026-04"
   topics = [ "app/uninstalled" ]
   uri = "/webhooks/app/uninstalled"
 
+  [[webhooks.subscriptions]]
+  compliance_topics = [ "customers/data_request", "customers/redact", "shop/redact" ]
+  uri = "/webhooks/compliance"
+
 [access_scopes]
 # Embed-only app: keep scopes minimal.
 # If your app works with empty scopes, set scopes = "".
